tests/compile_fail/type_mismatch_dimension.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/type_mismatch_dimension.rs:7:19
  |
7 |     let x: Time = Length::meters(1.0);
  |                   ^^^^^^^^^^^^^^^^^^^ expected `example_system::Dimension { length: 0, time: 1, mass: 0, temperature: 0 }`, found `example_system::Dimension { length: 1, time: 0, mass: 0, temperature: 0 }`
  |
  = note: expected constant `example_system::Dimension { length: 0, time: 1, mass: 0, temperature: 0 }`
             found constant `example_system::Dimension { length: 1, time: 0, mass: 0, temperature: 0 }`
